correct index name, add stock photos and make image box

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <meta charset="UTF-8">
-    <title>Maekes</title>
+    <title>Maekes - Home page</title>
 
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
@@ -13,14 +13,15 @@
             <h1>Maekes</h1>
         </div>
         
+        <!-- nav -->
         <div class="nav-container">
             <div class="page-link-1">
-                <a class="page-link-1" href="">Home</a>
+                <a class="page-link-1" href="index.html">Home</a>
 
                 <div class="dropdown">
                     <a class= "page-link-1" href="./pages/blog.html">Blog</a>
                     <div class="dropdown-content">
-                        <a href="./pages/blog.html">Recent Post</a>
+                        <a href="./pages/blog-pages/test.html">Recent Post</a>
                     </div>
                   </div>
                 <a class="page-link-1" href="">Sewing</a>
