--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <meta charset="UTF-8">
-    <title>Maekes</title>
+    <title>Maekes - Blog</title>
 
     <link rel="stylesheet" href="../styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
@@ -11,16 +11,16 @@
         <!-- nav -->
         <div class="nav-container">
             <div class="page-link-1">
-                <a class="page-link-1" href="">Home</a>
+                <a class="page-link-1" href="../index.html">Home</a>
 
                 <div class="dropdown">
-                    <a class= "page-link-1" href="./pages/blog.html">Blog</a>
+                    <a class= "page-link-1" href="../pages/blog.html">Blog</a>
                     <div class="dropdown-content">
-                        <a href="./pages/blog.html">Recent Post</a>
+                        <a href="../pages/blog-pages/test.html">Recent Post</a>
                     </div>
                   </div>
                 <a class="page-link-1" href="">Sewing</a>
-                <a class="page-link-1" href="./pages/contact.html">Contact</a>
+                <a class="page-link-1" href="../pages/contact.html">Contact</a>
             </div>
         </div>
 
@@ -28,24 +28,30 @@
 
         <div class="row">
             <div class="column left">
-                <p> test</p>
+                <p> boo</p>
 
             </div>
 
             <div class="column main">
                 <div class="blog-card">
-                    <h1>Test</h1>
-                    <div class="blog"
+                    <a class="blog-card-title" href="../pages/blog-pages/test.html">test</a>
+                    <div class="blog-img">
+                        <img src="../photos/sewing-machine-side-stock.jpg" alt ="Sewing machine">
+                    </div>
                     <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
                 </div>
                 <div class="blog-card">
                     <h1>Test</h1>
+                    <div class="blog-img">
+                        <img src="../photos/thread-birds-eye.jpg" alt ="Thread birds eye view">
+                    </div>
                     <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
                 </div>
+
             </div>
 
             <div class="column right">
-                <p> test</p>
+                <p> sneaky</p>
             </div>
         </div>
         
