add list-blog grid layout and reposisive image layout in a specific aspect ratio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="page-link-1" href="index.html">Home</a>
 
                 <div class="dropdown">
-                    <a class= "page-link-1" href="./pages/blog.html">Blog</a>
+                    <a class= "page-link-1" href="./pages/list-blog.html">Blog</a>
                     <div class="dropdown-content">
                         <a href="./pages/blog-pages/test.html">Recent Post</a>
                     </div>
