fix style link on te test blog page, included the root file, don't know if this will work on the web but it works locally for now

--- a/pages/blog-pages/test.html
+++ b/pages/blog-pages/test.html
@@ -5,23 +5,23 @@
     <title>Maekes - Test</title>
     <!-- none of the links on the test work come fix this later -->
 
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/home/egomidget/sewing_blog/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- nav -->
         <div class="nav-container">
             <div class="page-link-1">
-                <a class="page-link-1" href="/index.html">Home</a>
+                <a class="page-link-1" href="/home/egomidget/sewing_blog/index.html">Home</a>
 
                 <div class="dropdown">
-                    <a class= "page-link-1" href="/pages/blog.html">Blog</a>
+                    <a class= "page-link-1" href="/home/egomidget/sewing_blog/pages/list-blog.html">Blog</a>
                     <div class="dropdown-content">
-                        <a href="/pages/blog-pages/test.html">Recent Post</a>
+                        <a href="/home/egomidget/sewing_blog/pages/blog-pages/test.html">Recent Post</a>
                     </div>
                   </div>
                 <a class="page-link-1" href="#">Sewing</a>
-                <a class="page-link-1" href="/pages/contact.html">Contact</a>
+                <a class="page-link-1" href="/home/egomidget/sewing_blog/pages/contact.html">Contact</a>
             </div>
         </div>
 
